dnl @(#) $Header$ (LBL)
dnl
dnl Copyright (c) 1995, 1996, 1997, 1999
dnl	The Regents of the University of California.  All rights reserved.
dnl
dnl Process this file with autoconf to produce a configure script.
dnl

AC_REVISION($Revision$)
AC_INIT(tcpslice.c)

AC_CANONICAL_SYSTEM

if test -z "$PWD" ; then
	PWD=`pwd`
fi

AC_LBL_C_INIT(V_CCOPT, V_INCLS)

AC_CHECK_HEADERS(fcntl.h)
AC_HEADER_TIME

tcpslice_telloseeko=yes
AC_CHECK_FUNCS(ftello fseeko, ,AC_MSG_WARN(tcpslice may have trouble with dump files larger than 2 gigabytes); tcpslice_telloseeko=no; break)
if test "${tcpslice_telloseeko}" = "yes" ; then
	AC_DEFINE(FTELL, ftello)
	AC_DEFINE(FSEEK, fseeko)
else
	AC_DEFINE(FTELL, ftell)
	AC_DEFINE(FSEEK, fseek)
fi

AC_REPLACE_FUNCS(vfprintf strlcpy)

AC_LBL_LIBPCAP(V_PCAPDEP, V_INCLS)

AC_LBL_CHECK_TYPE(int32_t, int)
AC_LBL_CHECK_TYPE(u_int32_t, u_int)

AC_LBL_DEVEL(V_CCOPT)

if test "${srcdir}" = "." ; then
	srcdirprefix=""
else
	srcdirprefix="./"
fi

if test -r ${srcdirprefix}lbl/gnuc.h ; then
	rm -f gnuc.h
	ln -s ${srcdirprefix}lbl/gnuc.h gnuc.h
fi

AC_SUBST(V_CCOPT)
AC_SUBST(V_INCLS)
AC_SUBST(V_PCAPDEP)

AC_PROG_INSTALL

AC_OUTPUT(Makefile)

if test -f .devel ; then
	make depend
fi
exit 0
